fix nav close on safari, x styles on mobile (#1003)

--- a/src/internal/SideNav/_toggle-btn.scss
+++ b/src/internal/SideNav/_toggle-btn.scss
@@ -56,7 +56,10 @@
   }
 
   .side-nav__closed & {
-    right: -2.1rem;
+    right: -2.3rem;
+    @include breakpoint('620px') {
+      right: -2.1rem;
+    }
 
     div {
       .line:nth-child(2) {
